syntax = "proto3";

package cart;
option go_package="./cart";

service cart {
  rpc addProductToCart(AddProductToCartReq) returns (AddProductToCartResp);
  rpc cartProductList(CartProductListReq) returns (CartProductListResp);
  rpc deleteProductFromCart(DeleteProductFromCartReq) returns (DeleteProductFromCartResp);
  rpc updateProductDetail(UpdateProductDetailReq) returns (UpdateProductDetailResp);
}

message CartProduct {
  int64   Id = 1;
  int64   ProductId = 2;
  string  Title = 3;
  string  Banner = 4;
  int64   Price = 5;
  int64   DiscountPrice = 6;
  int64   Count = 7;
  int64   Checked = 8;
}

message AddProductToCartReq {
  int64   UserId = 1;
  int64   ProductId = 2;
  int64   Count = 3;
}
message AddProductToCartResp {}

message CartProductListReq {
  int64   UserId = 1;
}
message CartProductListResp {
  repeated CartProduct CartProducts = 1;
}

message DeleteProductFromCartReq {
  int64 UserId = 1;
  int64 CartId = 2;
}
message DeleteProductFromCartResp {}

message UpdateProductDetailReq {
  int64   CartId = 1;
  int64   UserId = 2;
  int64   Count = 3;
  int64   Check = 4;
}
message UpdateProductDetailResp {}